build clang gcc with cmake on circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,15 +18,17 @@ jobs:
             MATRIX_JSON=$(python .github/workflows/ci_set_matrix.py)
             echo "MATRIX_JSON=$MATRIX_JSON"
 
-            # arm-gcc
-            ARMGCC_FAMILY=$(echo $MATRIX_JSON | jq '.["arm-gcc"].family')
-            echo "ARMGCC_FAMILY=$ARMGCC_FAMILY"
-            echo "      - build:" >> .circleci/config2.yml
-            echo "          matrix:" >> .circleci/config2.yml
-            echo "            parameters:" >> .circleci/config2.yml
-            echo "              toolchain: ['arm-gcc']" >> .circleci/config2.yml
-            echo "              build-system: ['make']" >> .circleci/config2.yml
-            echo "              family: $ARMGCC_FAMILY" >> .circleci/config2.yml
+            TOOLCHAIN_LIST=("arm-clang" "arm-gcc")
+            for toolchain in "${TOOLCHAIN_LIST[@]}"; do
+              FAMILY=$(echo $MATRIX_JSON | jq -r ".\"$toolchain\".family")
+              echo "${toolchain}_FAMILY=$FAMILY"
+              echo "      - build:" >> .circleci/config2.yml
+              echo "          matrix:" >> .circleci/config2.yml
+              echo "            parameters:" >> .circleci/config2.yml
+              echo "              toolchain: ['$toolchain']" >> .circleci/config2.yml
+              echo "              build-system: ['cmake']" >> .circleci/config2.yml
+              echo "              family: $FAMILY" >> .circleci/config2.yml
+            done
 
       - continuation/continue:
           configuration_path: .circleci/config2.yml
