build make arm-gcc,  make-riscv-gcc, cmake arm-clang with circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,24 @@ jobs:
             MATRIX_JSON=$(python .github/workflows/ci_set_matrix.py)
             echo "MATRIX_JSON=$MATRIX_JSON"
 
-            #TOOLCHAIN_LIST=("arm-clang" "arm-gcc")
-            TOOLCHAIN_LIST=("arm-gcc")
-            for toolchain in "${TOOLCHAIN_LIST[@]}"; do
+            BUILDSYSTEM_TOOLCHAIN=(
+              "cmake arm-clang"
+              "make arm-gcc"
+              "make riscv-gcc"
+            )
+
+            for e in "${BUILDSYSTEM_TOOLCHAIN[@]}"; do
+              e_arr=($e)
+              build_system="${e_arr[0]}"
+              toolchain="${e_arr[1]}"
               FAMILY=$(echo $MATRIX_JSON | jq -r ".\"$toolchain\".family")
-              echo "${toolchain}_FAMILY=$FAMILY"
+              echo "FAMILY_${toolchain}=$FAMILY"
+
               echo "      - build:" >> .circleci/config2.yml
               echo "          matrix:" >> .circleci/config2.yml
               echo "            parameters:" >> .circleci/config2.yml
+              echo "              build-system: ['$build_system']" >> .circleci/config2.yml
               echo "              toolchain: ['$toolchain']" >> .circleci/config2.yml
-              echo "              build-system: ['make']" >> .circleci/config2.yml
               echo "              family: $FAMILY" >> .circleci/config2.yml
             done
 
