--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,11 @@ jobs:
 
             BUILDSYSTEM_TOOLCHAIN=(
               "cmake arm-clang"
+              "make aarch64-gcc"
               "make arm-gcc"
+              "make msp430-gcc"
               "make riscv-gcc"
+              "make rx-gcc"
             )
 
             for e in "${BUILDSYSTEM_TOOLCHAIN[@]}"; do
