--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -10,9 +10,12 @@ commands:
           name: Install Toolchain
           command: |
             TOOLCHAIN_JSON='{
+              "aarch64-gcc": "https://developer.arm.com/-/media/Files/downloads/gnu-a/10.3-2021.07/binrel/gcc-arm-10.3-2021.07-x86_64-aarch64-none-elf.tar.xz",
               "arm-clang": "https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz",
               "arm-gcc": "https://github.com/xpack-dev-tools/arm-none-eabi-gcc-xpack/releases/download/v12.3.1-1.1/xpack-arm-none-eabi-gcc-12.3.1-1.1-linux-x64.tar.gz",
-              "riscv-gcc": "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v13.2.0-2/xpack-riscv-none-elf-gcc-13.2.0-2-linux-x64.tar.gz"
+              "msp430-gcc": "http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSPGCC/9_2_0_0/export/msp430-gcc-9.2.0.50_linux64.tar.bz2",
+              "riscv-gcc": "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v13.2.0-2/xpack-riscv-none-elf-gcc-13.2.0-2-linux-x64.tar.gz",
+              "rx-gcc": "http://gcc-renesas.com/downloads/get.php?f=rx/8.3.0.202004-gnurx/gcc-8.3.0.202004-GNURX-ELF.run"
             }'
             toolchain_url=$(echo $TOOLCHAIN_JSON | jq -r '.["<< parameters.toolchain >>"]')
             echo "toolchain_url=$toolchain_url"
@@ -20,7 +23,14 @@ commands:
             # download and extract toolchain
             mkdir -p ~/cache/<< parameters.toolchain >>
             wget $toolchain_url -O toolchain.tar.gz
-            tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
+
+            if [[ << parameters.toolchain >> == rx-gcc ]]; then
+              mv toolchain.tar.gz toolchain.run
+              chmod +x toolchain.run
+              ./toolchain.run -p ~/cache/<< parameters.toolchain >>/gnurx -y
+            else
+              tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
+            fi
 
             # Add toolchain to PATH
             echo "export PATH=$PATH:`echo ~/cache/<< parameters.toolchain >>/*/bin`" >> $BASH_ENV
