--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -5,56 +5,68 @@ commands:
     parameters:
         toolchain:
             type: string
+
     steps:
-      - run:
-          name: Set toolchain url and key
-          command: |
-            TOOLCHAIN_JSON='{
-              "aarch64-gcc": "https://developer.arm.com/-/media/Files/downloads/gnu-a/10.3-2021.07/binrel/gcc-arm-10.3-2021.07-x86_64-aarch64-none-elf.tar.xz",
-              "arm-clang": "https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz",
-              "arm-gcc": "https://github.com/xpack-dev-tools/arm-none-eabi-gcc-xpack/releases/download/v12.3.1-1.1/xpack-arm-none-eabi-gcc-12.3.1-1.1-linux-x64.tar.gz",
-              "msp430-gcc": "http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSPGCC/9_2_0_0/export/msp430-gcc-9.2.0.50_linux64.tar.bz2",
-              "riscv-gcc": "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v13.2.0-2/xpack-riscv-none-elf-gcc-13.2.0-2-linux-x64.tar.gz",
-              "rx-gcc": "https://llvm-gcc-renesas.com/downloads/get.php?f=rx/8.3.0.202004-gnurx/gcc-8.3.0.202004-GNURX-ELF.run"
-            }'
-            toolchain_url=$(echo $TOOLCHAIN_JSON | jq -r '.["<< parameters.toolchain >>"]')
-            #echo "toolchain_url=$toolchain_url"
-            # only cache if not a github link
-            if [[ $toolchain_url != "https://github.com"* ]]; then
-              echo "<< parameters.toolchain >>-$toolchain_url" > toolchain_key
-            fi
-            echo "export toolchain_url=$toolchain_url" >> $BASH_ENV
+#      - when:
+#          condition: << parameters.toolchain >> == esp-idf
+#          step:
+#            - run:
+#                name: Pull ESP-IDF docker
+#                command: |
+#                  docker pull espressif/idf:v5.1.1
 
-      - restore_cache:
-          name: Restore Toolchain Cache
-          key: deps-{{ checksum "toolchain_key" }}
-          paths:
-            - ~/cache/<< parameters.toolchain >>
+      - when:
+          condition: << parameters.toolchain >> != esp-idf
+          steps:
+            - run:
+                name: Set toolchain url and key
+                command: |
+                  TOOLCHAIN_JSON='{
+                    "aarch64-gcc": "https://developer.arm.com/-/media/Files/downloads/gnu-a/10.3-2021.07/binrel/gcc-arm-10.3-2021.07-x86_64-aarch64-none-elf.tar.xz",
+                    "arm-clang": "https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz",
+                    "arm-gcc": "https://github.com/xpack-dev-tools/arm-none-eabi-gcc-xpack/releases/download/v12.3.1-1.1/xpack-arm-none-eabi-gcc-12.3.1-1.1-linux-x64.tar.gz",
+                    "msp430-gcc": "http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSPGCC/9_2_0_0/export/msp430-gcc-9.2.0.50_linux64.tar.bz2",
+                    "riscv-gcc": "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v13.2.0-2/xpack-riscv-none-elf-gcc-13.2.0-2-linux-x64.tar.gz",
+                    "rx-gcc": "https://llvm-gcc-renesas.com/downloads/get.php?f=rx/8.3.0.202004-gnurx/gcc-8.3.0.202004-GNURX-ELF.run"
+                  }'
+                  toolchain_url=$(echo $TOOLCHAIN_JSON | jq -r '.["<< parameters.toolchain >>"]')
 
-      - run:
-          name: Install Toolchain
-          command: |
-            # download if folder does not exist (not cached)
-            if [ ! -d ~/cache/<< parameters.toolchain >> ]; then
-              mkdir -p ~/cache/<< parameters.toolchain >>
-              wget --progress=dot:giga $toolchain_url -O toolchain.tar.gz
-              if [[ << parameters.toolchain >> == rx-gcc ]]; then
-                mv toolchain.tar.gz toolchain.run
-                chmod +x toolchain.run
-                ./toolchain.run -p ~/cache/<< parameters.toolchain >>/gnurx -y
-              else
-                tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
-              fi
-            fi
+                  # only cache if not a github link
+                  if [[ $toolchain_url != "https://github.com"* ]]; then
+                    echo "<< parameters.toolchain >>-$toolchain_url" > toolchain_key
+                  fi
+                  echo "export toolchain_url=$toolchain_url" >> $BASH_ENV
 
-            # Add toolchain to PATH
-            echo "export PATH=$PATH:`echo ~/cache/<< parameters.toolchain >>/*/bin`" >> $BASH_ENV
+            - restore_cache:
+                name: Restore Toolchain Cache
+                key: deps-{{ checksum "toolchain_key" }}
+                paths:
+                  - ~/cache/<< parameters.toolchain >>
 
-      - save_cache:
-          name: Save Toolchain Cache
-          key: deps-{{ checksum "toolchain_key" }}
-          paths:
-            - ~/cache/<< parameters.toolchain >>
+            - run:
+                name: Install Toolchain
+                command: |
+                  # download if folder does not exist (not cached)
+                  if [ ! -d ~/cache/<< parameters.toolchain >> ]; then
+                    mkdir -p ~/cache/<< parameters.toolchain >>
+                    wget --progress=dot:giga $toolchain_url -O toolchain.tar.gz
+                    if [[ << parameters.toolchain >> == rx-gcc ]]; then
+                      mv toolchain.tar.gz toolchain.run
+                      chmod +x toolchain.run
+                      ./toolchain.run -p ~/cache/<< parameters.toolchain >>/gnurx -y
+                    else
+                      tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
+                    fi
+                  fi
+
+                  # Add toolchain to PATH
+                  echo "export PATH=$PATH:`echo ~/cache/<< parameters.toolchain >>/*/bin`" >> $BASH_ENV
+
+            - save_cache:
+                name: Save Toolchain Cache
+                key: deps-{{ checksum "toolchain_key" }}
+                paths:
+                  - ~/cache/<< parameters.toolchain >>
 
 jobs:
   build:
@@ -71,8 +83,11 @@ jobs:
     resource_class: medium+
     steps:
       - checkout
-      - setup-toolchain:
-          toolchain: << parameters.toolchain >>
+      - when:
+          condition: << parameters.toolchain >> != esp-idf
+          steps:
+            - setup-toolchain:
+                toolchain: << parameters.toolchain >>
 
       - run:
           name: Get Dependencies
@@ -95,20 +110,24 @@ jobs:
       - run:
           name: Build
           command: |
-            # Only build one board per family for non PRs i.e commit to master
-            ONE_PER_FAMILY=""
-            if [ -z "$CIRCLE_PULL_REQUEST" ]; then
-              ONE_PER_FAMILY="--one-per-family"
-            fi
+            if [ << parameters.toolchain >> == "esp-idf" ]; then
+              docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py << parameters.family >>
+            else
+              # Only build one board per family for non PRs i.e commit to master
+              ONE_PER_FAMILY=""
+              if [ -z "$CIRCLE_PULL_REQUEST" ]; then
+                ONE_PER_FAMILY="--one-per-family"
+              fi
 
-            # Toolchain option default is gcc
-            if [ "<< parameters.toolchain >>" == "arm-clang" ]; then
-              TOOLCHAIN_OPTION="--toolchain clang"
-            elif [ "<< parameters.toolchain >>" == "arm-gcc" ]; then
-              TOOLCHAIN_OPTION="--toolchain gcc"
-            fi
+              # Toolchain option default is gcc
+              if [ "<< parameters.toolchain >>" == "arm-clang" ]; then
+                TOOLCHAIN_OPTION="--toolchain clang"
+              elif [ "<< parameters.toolchain >>" == "arm-gcc" ]; then
+                TOOLCHAIN_OPTION="--toolchain gcc"
+              fi
 
-            python tools/build.py $ONE_PER_FAMILY -s << parameters.build-system >> $TOOLCHAIN_OPTION << parameters.family >>
+              python tools/build.py $ONE_PER_FAMILY -s << parameters.build-system >> $TOOLCHAIN_OPTION << parameters.family >>
+            fi
 
 workflows:
   build:
