--- a/.github/workflows/build_util.yml
+++ b/.github/workflows/build_util.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build
         run: |
           if [ "${{ inputs.toolchain }}" == "esp-idf" ]; then
-            docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py ${{ matrix.arg }}
+            docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python tools/build.py ${{ matrix.arg }}
           else
             python tools/build.py -s ${{ inputs.build-system }} ${{ steps.setup-toolchain.outputs.build_option }} ${{ steps.set-one-per-family.outputs.build_option }} ${{ matrix.arg }}
           fi
