build vm for esp only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,11 @@ jobs:
               FAMILY=$(echo $MATRIX_JSON | jq -r ".\"$toolchain\".family")
               echo "FAMILY_${toolchain}=$FAMILY"
 
-              echo "      - build:" >> .circleci/config2.yml
+              if [ "$toolchain" == "esp-idf" ]; then
+                echo "      - build-vm:" >> .circleci/config2.yml
+              else
+                echo "      - build:" >> .circleci/config2.yml
+              fi
               echo "          matrix:" >> .circleci/config2.yml
               echo "            parameters:" >> .circleci/config2.yml
               echo "              build-system: ['$build_system']" >> .circleci/config2.yml
