nrf imxrt with large resource

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,26 +43,26 @@ jobs:
               FAMILY=$(jq -n --argjson family "$FAMILY" --argjson resource "$RESOURCE_LARGE" '$family | map(select(IN($resource[]) | not))')
 
               if [[ $toolchain == esp-idf ]]; then
-                echo "      - build-vm:"
+                echo "      - build-vm:" >> .circleci/config2.yml
               else
-                echo "      - build:"
+                echo "      - build:" >> .circleci/config2.yml
               fi
-              echo "          matrix:"
-              echo "            parameters:"
-              echo "              build-system: ['$build_system']"
-              echo "              toolchain: ['$toolchain']"
-              echo "              family: $FAMILY"
-              #echo "              resource_class: ['medium+']"
+              echo "          matrix:" >> .circleci/config2.yml
+              echo "            parameters:" >> .circleci/config2.yml
+              echo "              build-system: ['$build_system']" >> .circleci/config2.yml
+              echo "              toolchain: ['$toolchain']" >> .circleci/config2.yml
+              echo "              family: $FAMILY" >> .circleci/config2.yml
+              #echo "              resource_class: ['medium+']" >> .circleci/config2.yml
 
-              # large resources
+              # add large resources
               if [ "$(echo $FAMILY_LARGE | jq 'length')" -gt 0 ]; then
-                echo "      - build:"
-                echo "          matrix:"
-                echo "            parameters:"
-                echo "              build-system: ['$build_system']"
-                echo "              toolchain: ['$toolchain']"
-                echo "              family: $FAMILY_LARGE"
-                echo "              resource_class: ['large']"
+                echo "      - build:" >> .circleci/config2.yml
+                echo "          matrix:" >> .circleci/config2.yml
+                echo "            parameters:" >> .circleci/config2.yml
+                echo "              build-system: ['$build_system']" >> .circleci/config2.yml
+                echo "              toolchain: ['$toolchain']" >> .circleci/config2.yml
+                echo "              family: $FAMILY_LARGE" >> .circleci/config2.yml
+                echo "              resource_class: ['large']" >> .circleci/config2.yml
               fi
             done
 
