--- a/.github/workflows/build_util.yml
+++ b/.github/workflows/build_util.yml
@@ -9,9 +9,6 @@ on:
       toolchain:
         required: true
         type: string
-      toolchain_version:
-        required: false
-        type: string
       build-args:
         required: true
         type: string
@@ -40,7 +37,7 @@ jobs:
         uses: ./.github/actions/setup_toolchain
         with:
           toolchain: ${{ inputs.toolchain }}
-          toolchain_version: ${{ inputs.toolchain_version }}
+          toolchain_version: 'v5.1.1'
 
       - name: Get Dependencies
         uses: ./.github/actions/get_deps
@@ -60,7 +57,7 @@ jobs:
       - name: Build
         run: |
           if [ "${{ inputs.toolchain }}" == "esp-idf" ]; then
-            docker run --rm -v $PWD:/project -w /project espressif/idf:${{ inputs.toolchain_version }} python3 tools/build.py ${{ matrix.arg }}
+            docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python tools/build.py ${{ matrix.arg }}
           else
             python tools/build.py -s ${{ inputs.build-system }} ${{ steps.setup-toolchain.outputs.build_option }} ${{ steps.set-one-per-family.outputs.build_option }} ${{ matrix.arg }}
           fi
