enable i386 arch for running rx-gcc

--- a/.circleci/config2.yml
+++ b/.circleci/config2.yml
@@ -42,6 +42,10 @@ commands:
               if [[ << parameters.toolchain >> == rx-gcc ]]; then
                 mv toolchain.tar.gz toolchain.run
                 chmod +x toolchain.run
+                # rx-gcc is i386 binary
+                sudo dpkg --add-architecture i386
+                sudo apt update
+                sudo apt install libc6:i386 libncurses5:i386 libstdc++6:i386
                 ./toolchain.run -p ~/cache/<< parameters.toolchain >>/gnurx -y
               else
                 tar -C ~/cache/<< parameters.toolchain >> -xaf toolchain.tar.gz
