dwc2: for esp32 force disconnect/connect using USB_WRAP otg pad override (DM=DP=0) in addition to dwc2's dctrl

--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -5,7 +5,7 @@ inputs:
     description: 'Toolchain name'
     required: true
   toolchain_version:
-    description: 'Toolchain URL or version'
+    description: 'Toolchain version'
     required: true
 
 runs:
